--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -32,6 +32,8 @@
     
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    
+    <!-- Styles ans Ende verschoben für bessere WhatsApp-Kompatibilität -->
     <style>
         .site-header {
             padding: 3rem 2rem 1rem;
