--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://jochenhornung.de{{ page.url }}">
     <meta property="og:title" content="{% if title %}{{ title }} - {% endif %}Jochen Hornung">
     <meta property="og:description" content="Raum für Menschlichkeit und Tiefe. Coaching, Texte und Gedanken von Jochen Hornung aus Berlin.">
-    <meta property="og:image" content="https://jochenhornung.de/images/hero_for_SM_WA.png">
+    <meta property="og:image" content="https://jochenhornung.de/images/og-image.jpg">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://jochenhornung.de{{ page.url }}">
     <meta name="twitter:title" content="{% if title %}{{ title }} - {% endif %}Jochen Hornung">
-    <meta name="twitter:description" content="Raum für Menschlichkeit und Tiefe. Coaching, Texte und Gedanken von Jochen Hornung aus Berlin.">
-    <meta name="twitter:image" content="https://jochenhornung.de/images/hero_for_SM_WA.png">
+    <meta property="twitter:description" content="Raum für Menschlichkeit und Tiefe. Coaching, Texte und Gedanken von Jochen Hornung aus Berlin.">
+    <meta property="twitter:image" content="https://jochenhornung.de/images/og-image.jpg">
     
     <!-- Favicons für alle Browser und Plattformen -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
