--- a/src/werkzeuge.njk
+++ b/src/werkzeuge.njk
@@ -99,8 +99,8 @@ title: Werkzeuge
         </div>
         
         <div class="product-item">
-            <img src="/images/AICO_logo_webseite_1408x736.png" alt="AICO" class="product-logo">
-            <h3>AICO</h3>
+            <img src="/images/AICO_logo_final.png" alt="AICO" class="product-logo">
+            <h3>AICO - Artificial Intelligence Consciousness Override</h3>
             <p>Personalisiertes Framework für konfrontative Selbstreflexion. Intensive Coaching-Arbeit strukturiert.</p>
             <p class="product-status">Mehr Informationen folgen.</p>
         </div>
