werkzeuge.njk aktualisieren

--- a/src/werkzeuge.njk
+++ b/src/werkzeuge.njk
@@ -94,7 +94,7 @@ title: Werkzeuge
             <div class="product-links">
                 <a href="#" onclick="document.getElementById('lightbox').classList.add('active'); return false;">Einen Blick darauf werfen?</a>
                 <a href="/docs/OneYear_Story3.pdf" target="_blank">Die Geschichte dahinter</a>
-                <a href="mailto:kontakt@jochenhornung.de">Interesse? Schreib mir.</a>
+                <a href="mailto:info@jochenhornung.de">Interesse? Schreib mir.</a>
             </div>
         </div>
         
