--- a/src/_layouts/text.njk
+++ b/src/_layouts/text.njk
@@ -15,7 +15,7 @@ layout: base
         font-size: 0.9rem;
         font-style: italic;
         color: #888;
-        margin-bottom: 3rem; /* Mehr Abstand zum Titel! */
+        margin-bottom: 5rem; /* VIEL MEHR RAUM! */
         line-height: 1.6;
         max-width: 600px;
     }
@@ -68,13 +68,3 @@ layout: base
         {{ content | safe }}
     </div>
 </div>
-```
-
-**Abstände jetzt:**
-```
-Datum
-  ↓ 1.5rem
-Kurzbeschreibung
-  ↓ 3rem (groß!)
-Titel + Gedicht (Einheit)
-  ↓ 0.8rem (klein!)
