--- a/src/_layouts/text.njk
+++ b/src/_layouts/text.njk
@@ -15,7 +15,7 @@ layout: base
         font-size: 0.9rem;
         font-style: italic;
         color: #888;
-        margin-bottom: 5rem; /* VIEL MEHR RAUM! */
+        margin-bottom: 2.5rem;
         line-height: 1.6;
         max-width: 600px;
     }
@@ -24,7 +24,7 @@ layout: base
         font-family: Georgia, serif;
         font-size: 1.8rem;
         font-weight: 400;
-        margin-bottom: 0.8rem; /* Bleibt eng am Gedicht */
+        margin-bottom: 0.5rem;
         line-height: 1.3;
     }
     
