--- a/src/_layouts/text.njk
+++ b/src/_layouts/text.njk
@@ -24,7 +24,7 @@ layout: base
         font-family: Georgia, serif;
         font-size: 1.8rem;
         font-weight: 400;
-        margin-bottom: 0.2rem;
+        margin-bottom: 0;
         line-height: 1.3;
     }
     
@@ -32,6 +32,7 @@ layout: base
         font-family: Georgia, serif;
         line-height: 1.5;
         max-width: 600px;
+        margin-top: 0;
     }
     
     .text-back {
