--- a/src/_layouts/text.njk
+++ b/src/_layouts/text.njk
@@ -32,14 +32,11 @@ layout: base
         font-family: Georgia, serif;
         line-height: 1.5;
         max-width: 600px;
-    }
-    
-    /* Erstes P-Tag hat keinen margin-top! */
-    .text-content p:first-child {
-        margin-top: 0;
+        margin-top: -0.5rem; /* ZIEHT DEN TEXT HOCH! */
     }
     
     .text-content p {
+        margin-top: 0;
         margin-bottom: 1.5rem;
     }
     
