--- a/src/index.njk
+++ b/src/index.njk
@@ -7,7 +7,7 @@ title: Raum für Menschlichkeit und Tiefe
   .hero {
     background-image: url('/images/hero.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: center left;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
