--- a/src/index.njk
+++ b/src/index.njk
@@ -27,8 +27,8 @@ title: Raum für Menschlichkeit und Tiefe
 
   /* Auf Desktop: Menü höher */
   @media (min-width: 769px) {
-    .hero {
-      padding-bottom: 2rem;
+    .hero-nav {
+      margin-top: -45vh;
     }
   }
   
