--- a/src/index.njk
+++ b/src/index.njk
@@ -9,6 +9,7 @@ title: Raum für Menschlichkeit und Tiefe
         background-size: cover;
         background-position: center center;
         min-height: 100vh;
+        min-height: 100dvh;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
