--- a/src/index.njk
+++ b/src/index.njk
@@ -4,6 +4,11 @@ title: Raum für Menschlichkeit und Tiefe
 ---
 
 <style>
+    /* Footer auf Startseite verstecken */
+    .site-footer {
+        display: none;
+    }
+
     .hero {
         background-image: url('/images/hero.jpg');
         background-size: cover;
