--- a/src/index.njk
+++ b/src/index.njk
@@ -48,6 +48,7 @@ title: Raum für Menschlichkeit und Tiefe
         display: flex;
         flex-direction: column;
         justify-content: center;
+        margin-top: -10rem;
     }
 
     .hero-name {
@@ -74,6 +75,7 @@ title: Raum für Menschlichkeit und Tiefe
         column-gap: 2rem;
         flex-wrap: wrap;
         justify-content: center;
+        margin-bottom: 6rem;
     }
 
     .hero-nav a {
