--- a/src/index.njk
+++ b/src/index.njk
@@ -32,6 +32,10 @@ title: Raum für Menschlichkeit und Tiefe
             background-position: 65% center;
             padding-bottom: 8rem;
         }
+        
+        .hero-nav {
+            margin-bottom: 7rem;
+        }
     }
 
     .hero-overlay {
