--- a/src/index.njk
+++ b/src/index.njk
@@ -32,10 +32,6 @@ title: Raum für Menschlichkeit und Tiefe
             background-position: 65% center;
             padding-bottom: 8rem;
         }
-        
-        .hero-nav {
-            margin-bottom: 7rem;
-        }
     }
 
     .hero-overlay {
@@ -80,6 +76,12 @@ title: Raum für Menschlichkeit und Tiefe
         flex-wrap: wrap;
         justify-content: center;
         margin-bottom: 4.5rem;
+    }
+
+    @media (max-width: 768px) {
+        .hero-nav {
+            margin-bottom: 6rem;
+        }
     }
 
     .hero-nav a {
