--- a/src/index.njk
+++ b/src/index.njk
@@ -78,6 +78,13 @@ title: Raum für Menschlichkeit und Tiefe
         column-gap: 2rem;
         flex-wrap: wrap;
         justify-content: center;
+        margin-bottom: 6rem;
+    }
+
+    @media (max-width: 768px) {
+        .hero-nav {
+            margin-bottom: 10rem;
+        }
     }
 
     .hero-nav a {
