--- a/src/index.njk
+++ b/src/index.njk
@@ -123,4 +123,7 @@ title: Raum für Menschlichkeit und Tiefe
     }
     setHeroHeight();
     window.addEventListener('resize', setHeroHeight);
+    
+    // Seite ganz nach oben scrollen beim Laden
+    window.scrollTo(0, 0);
 </script>
